# gateway

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yml
src/: main.rs
src/api/: health.rs
