[package]
name = "uptimebeaver-gateway"
version = "0.1.0"
authors = ["AltF2 <contact@altf2.dev>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tonic = "0.7.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
prost = "0.10"

utils = { git = "https://github.com/uptimebeaver/utils.git" }
poem = { version = "1.3.32", features = ["anyhow", "tokio-native-tls"] }
poem-openapi = { version = "2.0.2", features = ["swagger-ui"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[build-dependencies]
tonic-build = { version = "0.7",  features = ["prost"] }
